--- a/style/style.css
+++ b/style/style.css
@@ -84,7 +84,7 @@ ol
 ol li
 { margin: 0 0 11px 0;}
 
-#main, #logo, #menubar, #site_content, #footer
+#main, #logo, #menubar, #site_content, #updatebar, #footer
 { margin-left: auto; 
   margin-right: auto;}
 
@@ -163,7 +163,7 @@ ul#menu li a:hover, ul#menu li.selected a, ul#menu li.selected a:hover
 { width: 837px;
   overflow: hidden;
   margin: 0 auto 0 auto;
-  padding: 20px 24px 20px 37px;
+  padding: 20px 24px 40px 37px;
   background: #FFF;} 
 
 .sidebar
@@ -204,6 +204,16 @@ ul#menu li a:hover, ul#menu li.selected a, ul#menu li.selected a:hover
   margin: 0 0 6px 0; 
   padding: 0 0 4px 25px;
   line-height: 1.5em;}
+
+#updatebar
+{ width: 900px;
+  font: normal 80% 'century gothic', arial, sans-serif;
+  height: 20px;
+  padding: 10px 0 0px 0;
+  text-align: right;
+  background: #FFF;
+  color: #909090;
+  letter-spacing: 0.2em;}
 
 #footer
 { width: 900px;
