--- a/style/css/lightslider.css
+++ b/style/css/lightslider.css
@@ -1,7 +1,23 @@
-/*! lightslider - v1.1.3 - 2015-04-14
-* https://github.com/sachinchoolur/lightslider
-* Copyright (c) 2015 Sachin N; Licensed MIT */
-/** /!!! core css Should not edit !!!/**/ 
+.sliderClass {
+    width: 100%;
+}
+.sliderClass  ul {
+    list-style: none outside none;
+    padding-left: 0;
+    margin-bottom:0;
+}
+.sliderClass li {
+    display: block;
+    float: left;
+    margin-right: 0px;
+    cursor:pointer;
+}
+
+.sliderClass img {
+    display: block;
+    height: 400px;
+    width: 600px;
+}
 
 .lSSlideOuter {
     overflow: hidden;
