--- a/style/css/lightslider.css
+++ b/style/css/lightslider.css
@@ -1,22 +1,24 @@
 .sliderClass {
     width: 740px;
 }
-.sliderClass  ul {
-    list-style: none outside none;
-    padding-left: 0;
-    margin-bottom:0;
-}
-.sliderClass li {
-    display: block;
-    float: left;
-    margin-right: 0px;
-    cursor:pointer;
-}
 
 .sliderClass img {
     display: block;
     height: 400px;
     width: 600px;
+}
+
+.sliderClass  ul {
+    list-style: none outside none;
+    margin: 0 0 0px 0;
+    padding: 0 0 0px 0px;
+}
+
+.sliderClass li {
+    display: block;
+    float: left;
+    margin-right: 0px;
+    cursor:pointer;
 }
 
 .lSSlideOuter {
