--- a/style/css/lightslider.css
+++ b/style/css/lightslider.css
@@ -1,11 +1,11 @@
 .sliderClass {
-    width: 740px;
+    max-width: 800px;
 }
 
 .sliderClass img {
     display: block;
-    height: 400px;
-    width: 600px;
+    max-height: 700px;
+    max-width: 700px;
 }
 
 .sliderClass  ul {
