better green in text + removing spaces

--- a/style/css/style.css
+++ b/style/css/style.css
@@ -31,7 +31,7 @@ h4, h5, h6
 { margin: 0;
   padding: 0 0 5px 0;
   font: normal 120% arial, sans-serif;
-  color: #719809;}
+  color: #5c7d04;}
 
 h5, h6
 { font: italic 95% arial, sans-serif;
