--- a/style/css/style.css
+++ b/style/css/style.css
@@ -12,7 +12,7 @@ body
 
 p
 { padding: 0 0 15px 0;
-  line-height: 1.7em;}
+  line-height: 1.5em;}
 
 img
 { border: 0;}
@@ -41,10 +41,16 @@ h5, h6
 h6
 { color: #362C20;}
 
+h7
+{ padding: 0px 0px 10px 0px;
+  display: block;
+  text-align: left;
+  line-height: 1.2em;}
+
 a, a:hover
 { outline: none;
   text-decoration: underline;
-  color: #286508;}
+  color: #2f5902;}
 
 a:hover
 { text-decoration: none;}
