--- a/style/css/style.css
+++ b/style/css/style.css
@@ -18,13 +18,13 @@ img
 { border: 0;}
 
 h1, h2, h3, h4, h5, h6 
-{ font: normal 175% 'century gothic', arial, sans-serif;
+{ font: normal 150% 'century gothic', arial, sans-serif;
   color: #43423F;
   margin: 0 0 15px 0;
-  padding: 15px 0 5px 0;}
+  padding: 15px 0 0px 0;}
 
 h2
-{ font: normal 175% 'century gothic', arial, sans-serif;
+{ font: normal 150% 'century gothic', arial, sans-serif;
   color: #719809;}
 
 h4, h5, h6
@@ -36,7 +36,7 @@ h4, h5, h6
 h5, h6
 { font: italic 80% arial, sans-serif;
   padding: 0 0 5px 0;
-  color: #000;}
+  color: #00000080;}
 
 h6
 { color: #362C20;}
@@ -323,3 +323,18 @@ table tr td
 { background: #FFF;
   color: #47433F;
   border-top: 0px solid #FFF;}
+
+a.more link {
+	text-decoration:none;
+ 	outline: none;
+}
+
+.more content span {
+ 	display: none;
+}
+
+.comment {
+ 	width: 800px;                 /* ??? */
+ 	background-color: #FFF;    /* ??? */
+ 	margin: 10px;                 /* ??? */
+}
